--- a/contacts.html
+++ b/contacts.html
@@ -202,7 +202,7 @@
       </footer>
       <section class="bg-gray-100 section-xs text-center">
         <div class="container">
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="https://www.templatemonster.com">TemplateMonster</a></p>
+          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos os direitos reservados. Design de <a href="https://www.templatemonster.com">Blitz Marketing Digital.</a></p>
         </div>
       </section>
     </div>
