--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
                     <li>
                       <div class="unit unit-spacing-xs align-items-center">
                         <div class="unit-left font-weight-bold">Entre em Contato:</div>
-                        <div class="unit-body"><a href="tel:#">34-99892-1333, 34-99205-7793</a></div>
+                        <div class="unit-body"><a href="https://wa.me/55034998609994">34-99860-9994, 34-99860-9994</a></div>
                       </div>
                     </li>
                     <li>
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                   <p class="contact-list-title">Telefones</p>
-                  <div class="contact-list-content"><span class="icon mdi mdi-phone icon-primary"></span><a href="tel:#">34-99205-7793</a><span>, </span><a href="tel:#">34-99892-1333</a></div>
+                  <div class="contact-list-content"><span class="icon mdi mdi-phone icon-primary"></span><a href="tel:#">34-99860-9994</a><span>, </span><a href="tel:#">34-99860-9994</a></div>
                 </li>
                 <li>
                   <p class="contact-list-title">E-mail</p>
