--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li>
                       <div class="unit unit-spacing-xs align-items-center">
                         <div class="unit-left font-weight-bold">Entre em Contato:</div>
-                        <div class="unit-body"><a href="tel:#">34-99892-1333, 34-99205-7793</a></div>
+                        <div class="unit-body"><a href="https://wa.me/55034998609994">34-99860-9994, 34-99860-9994</a></div>
                       </div>
                     </li>
                     <li>
